# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/poetry-testi/: pyproject.toml
laskarit/poetry-testi/src/: index.py
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: index.py
src/data/: hostile_mobs.py  level_themes.py  lore_deck.py
src/entities/: character.py  enemy.py  friendly.py  level.py  player.py
src/services/: game_logic.py  world_state.py
src/tests/: enemy_test.py  game_logic_test.py  level_test.py  player_test.py  world_state_test.py
src/ui/: ui.py
