[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "w1ll1ey",email = "vili.ilari.kaisto@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "invoke (>=2.2.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.5,<8.0.0)"
]
